--- a/backend/.local.env
+++ b/backend/.local.env
@@ -1,7 +1,8 @@
-DATABASE_NAME = databaseName
-DATABASE_HOST = hostDatabase
-DATABASE_PORT = port
+DATABASE_NAME = dbName
+DATABASE_HOST = localhost
+DATABASE_PORT = 1111
 DATABASE_USERNAME = postgres
 DATABASE_PASSWORD = postgres
 DATABASE_SYNC = true
 DATABASE_LOGGING = true
+
